[project]
name = "syncphony"
version = "0.1.0"
description = "Music Streaming Syncing utility suite"
readme = "README.md"
requires-python = ">=3.12"
keywords = []
authors = [
    { name = "Felix Cusson", email = "felixcusson@gmail.com" },
]
maintainers = [
    { name = "Felix Cusson", email = "felixcusson@gmail.com" },
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pylint",
    "coverage",
    "radon",
    "build",
    "ruff",
    "mypy",
    "bandit",
]

[project.urls]
"Homepage" = "https://github.com/fcusson/syncphony"
"Bug Reports" = "https://github.com/fcusson/syncphony/issues/new"
"Source" = "https://github.com/fcusson/syncphony"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "./src/" }

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
exclude = ["test/"]

[tool.pylsp-mypy]
enabled = true
live_mode = false
strict = true
exclude = ["test/"]

[tool.ruff]
line-length = 80
target-version = "py312"
fix = true
src = ["syncphony"]
exclude = ["test/", "scripts/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "TCH", "TID", "B", "C4", "N", "SIM", "ARG", "D"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["D104"]

[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true
